--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,9 @@ dependencies {
     compile 'org.apache.httpcomponents:httpasyncclient:4.1'
     compile 'org.apache.httpcomponents:httpmime:4.4.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.6.0'
+    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.6.0'
     compile name: 'goolla-0.0.1'
+    compile 'org.apache.commons:commons-lang3:3.4'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
